syntax = "proto3";

option csharp_namespace = "InspectorClient";

package greet;
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
//import "google/protobuf/wrappers.proto";
// The greeting service definition.
service Bank {
  // Sends a greeting
  rpc OpenAccount (OpenAccountRequest) returns (google.protobuf.UInt32Value);
  rpc Withdraw (WithdrawRequest) returns (google.protobuf.FloatValue);
  rpc Deposit (DepositRequest) returns (google.protobuf.Empty);
  rpc GetHistory (google.protobuf.UInt32Value) returns (google.protobuf.StringValue);
  rpc CloseAccount (google.protobuf.UInt32Value) returns (google.protobuf.BoolValue);
  rpc StartInspection (google.protobuf.Empty)  returns  (google.protobuf.StringValue);
  rpc FinishInspection (google.protobuf.Empty) returns  (google.protobuf.StringValue);
  rpc GetFullSummary (google.protobuf.Empty) returns (stream google.protobuf.StringValue);

}

message OpenAccountRequest {
  string firstName = 1;
  string lastName =  2;
  float  debtLimit = 3;
}
// The request message containing the user's name.
message DepositRequest {
  uint32 account = 1;
  float ammount = 2;
}

message WithdrawRequest {
  uint32 account = 1;
  float ammount = 2;
}


